--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -6,6 +6,10 @@ on:
   pull_request:
     branches: [ "master" ]
 
+env:
+ LOGIN: ${{ secrets.DOCKER_LOGIN }}
+ NAME: ${{ secrets.DOCKER_NAME }}
+ 
 jobs:
 
   build:
@@ -13,6 +17,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - name: Login to docker.io
+      run:  echo ${{ secrets.DOCKER_PWD }} | docker login -u ${{ secrets.DOCKER_LOGIN }} --password-stdin
     - uses: actions/checkout@v3
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag rmulyukov/nginxtest:$(date +%s)
+      run: docker build . --file Dockerfile --tag rmulyukov/nginxtest:${GITHUB_REF:11}
+    - name: Push image to docker.io
+      run: docker push rmulyukov/nginxtest:${GITHUB_REF:11}
+  
