--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -7,8 +7,9 @@ on:
     branches: [ "master" ]
 
 env:
- LOGIN: ${{ secrets.DOCKER_LOGIN }}
- NAME: ${{ secrets.DOCKER_NAME }}
+ #LOGIN: ${{ secrets.DOCKER_LOGIN }}
+ #NAME: ${{ secrets.DOCKER_NAME }}
+ VER: $(date +%s)
  
 jobs:
 
@@ -21,8 +22,8 @@ jobs:
       run:  echo ${{ secrets.DOCKER_PWD }} | docker login -u ${{ secrets.DOCKER_LOGIN }} --password-stdin
     - uses: actions/checkout@v3
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag rmulyukov/nginxtest:$(date +%s)
+      run: docker build . --file Dockerfile --tag rmulyukov/nginxtest:$VER
      # ${GITHUB_REF:11}
     - name: Push image to docker.io
-      run: docker push rmulyukov/nginxtest:${GITHUB_REF:11}
+      run: docker push rmulyukov/nginxtest:$VER
   
