--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -6,10 +6,10 @@ on:
   pull_request:
     branches: [ "master" ]
 
-env:
+#env:
  #LOGIN: ${{ secrets.DOCKER_LOGIN }}
  #NAME: ${{ secrets.DOCKER_NAME }}
-  VER: $(date +%s) 
+  
  
 jobs:
 
@@ -22,8 +22,10 @@ jobs:
       run:  echo ${{ secrets.DOCKER_PWD }} | docker login -u ${{ secrets.DOCKER_LOGIN }} --password-stdin
     - uses: actions/checkout@v3
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag "rmulyukov/nginxtest:$VER"
+      env:
+        VER:  $(date +%s)
+      run: docker build . --file Dockerfile --tag rmulyukov/nginxtest:${{ VER }}
      # ${GITHUB_REF:11}
     - name: Push image to docker.io
-      run: docker push "rmulyukov/nginxtest:$VER"
+      run: docker push rmulyukov/nginxtest:${{ VER }}
   
