--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -6,17 +6,19 @@ on:
   pull_request:
     branches: [ "master" ]
 
-env:
+#env:
  #LOGIN: ${{ secrets.DOCKER_LOGIN }}
  #NAME: ${{ secrets.DOCKER_NAME }}
-   VER: ${{ (date +%s) }}
+ #  VER: ${{ (date +%s) }}
  
 jobs:
 
   build:
 
     runs-on: ubuntu-latest
-
+    env:
+      VER: ${{ (date +%s) }}
+    
     steps:
     - name: Login to docker.io
       run:  echo ${{ secrets.DOCKER_PWD }} | docker login -u ${{ secrets.DOCKER_LOGIN }} --password-stdin
