--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -8,8 +8,8 @@ on:
 
 #    env:
 #      VER: ${{ (date +%s) }}
-env:
-  IMAGE_TAG: ${{ github.sha }}
+#env:
+#  IMAGE_TAG: ${{ github.sha }}
 jobs:
 
   build:
@@ -21,8 +21,8 @@ jobs:
       run:  echo ${{ secrets.DOCKER_PWD }} | docker login -u ${{ secrets.DOCKER_LOGIN }} --password-stdin
     - uses: actions/checkout@v3
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag rmulyukov/nginxtest:$IMAGE_TAG
+      run: docker build . --file Dockerfile --tag rmulyukov/nginxtest:${GITHUB_SHA::8}
      # ${GITHUB_REF:11}
     - name: Push image to docker.io
-      run: docker push rmulyukov/nginxtest:$IMAGE_TAG
+      run: docker push rmulyukov/nginxtest:${GITHUB_SHA::8}
   
