--- a/.github/workflows/docker-image-tags.yml
+++ b/.github/workflows/docker-image-tags.yml
@@ -13,6 +13,11 @@ jobs:
 
     
     steps:
-    - name: test
-      run:
-        echo ${GITHUB_REF:10}
+    - name: Login to docker.io
+      run:  echo ${{ secrets.DOCKER_PWD }} | docker login -u ${{ secrets.DOCKER_LOGIN }} --password-stdin
+    - uses: actions/checkout@v3
+    - name: Build the Docker image
+      run: docker build . --file Dockerfile --tag rmulyukov/nginxtest:${GITHUB_REF:10}
+    - name: Push image to docker.io
+      run: docker push rmulyukov/nginxtest:${GITHUB_REF:10}
+
