--- a/.github/workflows/docker-image-tags.yml
+++ b/.github/workflows/docker-image-tags.yml
@@ -24,8 +24,8 @@ jobs:
       run: |
           cd helm/myapp
           sed -i 's/^    tag: .*/    tag: ${GITHUB_REF:10}/g' values.yaml 
-          #git config --global user.name 'GitHub Actions'
-          #git config --global user.email 'ustasnest@github.com'
+          git config --global user.name 'GitHub Actions'
+          git config --global user.email 'actions@github.com'
           git add values.yaml
           git commit -m "Update values.yaml"
           git push origin HEAD
