--- a/.github/workflows/docker-image-tags.yml
+++ b/.github/workflows/docker-image-tags.yml
@@ -28,5 +28,5 @@ jobs:
           git config --global user.email 'actions@github.com'
           git add values.yaml
           git commit -m "Update values.yaml"
-          git push origin 
+          git push origin HEAD:master --force
 
