--- a/.github/workflows/docker-image-tags.yml
+++ b/.github/workflows/docker-image-tags.yml
@@ -23,7 +23,8 @@ jobs:
     - name: Update tag in values.yaml
       run: |
           cd helm/myapp
-          sed -i 's/^    tag: .*/    tag: ${{ GITHUB_REF:10 }}/g' values.yaml 
+          echo "${ GITHUB_REF:10 }"
+          sed -i 's/^    tag: .*/    tag: "${ GITHUB_REF:10 }"/g' values.yaml 
           git config --global user.name 'GitHub Actions'
           git config --global user.email 'actions@github.com'
           git add values.yaml
