--- a/.github/workflows/docker-image-tags.yml
+++ b/.github/workflows/docker-image-tags.yml
@@ -13,6 +13,10 @@ jobs:
 
     
     steps:
+    - name: Tag
+      run: |
+          export TAG=${GITHUB_REF:10}
+          echo $TAG
     - name: Login to docker.io
       run:  echo ${{ secrets.DOCKER_PWD }} | docker login -u ${{ secrets.DOCKER_LOGIN }} --password-stdin
     - uses: actions/checkout@v3
@@ -23,7 +27,7 @@ jobs:
     - name: Update tag in values.yaml
       run: |
           cd helm/myapp
-          export TAG=${ GITHUB_REF:10 }
+          export TAG=${GITHUB_REF:10}
           echo $TAG
           sed -i 's/^    tag: .*/    tag: $TAG/g' values.yaml 
           git config --global user.name 'GitHub Actions'
