--- a/.github/workflows/docker-image-tags.yml
+++ b/.github/workflows/docker-image-tags.yml
@@ -13,20 +13,18 @@ jobs:
 
     
     steps:
-    - name: Tag
-      run: |
-          export TAG=${GITHUB_REF:10}
-          echo $TAG
     - name: Login to docker.io
       run:  echo ${{ secrets.DOCKER_PWD }} | docker login -u ${{ secrets.DOCKER_LOGIN }} --password-stdin
     - uses: actions/checkout@v3
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag rmulyukov/nginxtest:${TAG}
+      run: docker build . --file Dockerfile --tag rmulyukov/nginxtest:${GITHUB_REF:10}
     - name: Push image to docker.io
-      run: docker push rmulyukov/nginxtest:${TAG}
+      run: docker push rmulyukov/nginxtest:${GITHUB_REF:10}
     - name: Update tag in values.yaml
       run: |
           cd helm/myapp
+          export TAG=${GITHUB_REF:10}
+          echo $TAG
           sed -i 's/^    tag: .*/    tag: $TAG/g' values.yaml 
           git config --global user.name 'GitHub Actions'
           git config --global user.email 'actions@github.com'
