--- a/.github/workflows/docker-image-tags.yml
+++ b/.github/workflows/docker-image-tags.yml
@@ -27,7 +27,7 @@ jobs:
     - name: Update tag in values.yaml
       run: |
           cd helm/myapp
-          sed -i 's/^    tag: .*/    tag: $TAG/g' values.yaml 
+          sed -i 's/^    tag: .*/    tag: ${TAG}/g' values.yaml 
           git config --global user.name 'GitHub Actions'
           git config --global user.email 'actions@github.com'
           git add values.yaml
